--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,9 @@ Build-Depends: debhelper (>= 9.0.0),
                quilt,
                pkg-config,
                libgles2-mesa-dev,
-               libwayland-dev
+               libwayland-dev,
+               libx11-xcb-dev,
+               libxcb-present-dev
 Standards-Version: 3.9.8
 Section: libs
 Homepage: https://github.com/gemian/libhybris
