--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,8 @@ Build-Depends: debhelper (>= 9.0.0),
                libgles2-mesa-dev,
                libwayland-dev,
                libx11-xcb-dev,
-               libxcb-present-dev
+               libxcb-present-dev,
+               libxext-dev
 Standards-Version: 3.9.8
 Section: libs
 Homepage: https://github.com/gemian/libhybris
